# Tasks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.sample  pyproject.toml  run.sh
config/: nginx.conf
djangoProject/: context_processors.py  extra_processors.py  settings.py  urls.py
myapp/: views.py
myapp/templates/: header.html  index.html  main.html  map.html  obj-gallery.html  object-preview.html  object.html
static/css/: attached_files.css  calendar.css  card.css  custom_styles.css  header.css  pagination.css  styles.css
static/js/: custom-scripts.js  fullcalendar-premium.min.js
tasks/: admin.py  apps.py  filters.py  forms.py  models.py  views.py
tasks/functions/: objects.py  service.py  tasks_actions.py  tasks_prepare.py
tasks/migrations/: 0001_initial.py  0002_object_parent_alter_address_apartment_and_more.py  0003_alter_engineer_user_alter_object_files_and_more.py  0004_object_slug_alter_object_parent.py  0005_alter_object_slug.py  0006_attachedfile_type_alter_object_description.py  0007_remove_attachedfile_type_attachedfile_extension.py  0008_alter_objectgroup_name_alter_task_text.py  0009_task_completion_text.py  0010_departament_alter_task_engineers_and_more.py  0011_alter_task_options_task_create_time_and_more.py  0012_engineer_head_of_department_alter_engineer_position.py  0013_rename_departament_department_and_more.py  0014_task_creator.py  0015_object_another_link_object_ecstasy_link_and_more.py  0016_attachedfile_is_image.py  0017_task_deleted.py  (+8 more)
user/: admin.py  forms.py  models.py  urls.py  views.py
(+93 files in other folders)
