[tool.poetry]
package-mode = false
version = "0.1.0"
description = ""
authors = ["syankovskiy <semyon21@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-filter = "^24.3"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
redis = "^5.0.8"
django-ckeditor = "^6.7.1"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
black = {extras = ["d"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
